# finance_analyzer

./: .gitignore  README.md  dashboard_config.json  main.py  pyproject.toml
financial_analyzer/: dashboard.py  data_analysis.py
